hphp/hack/test/typecheck/ffp/yield_bad1.php
<?hh // partial
// Copyright 2004-present Facebook. All Rights Reserved.

function test(): void {
  foo(yield 3);
}
